# codex-github-test

./: AGENTS.md  README.md  pyproject.toml
.agents/skills/issue-fix-automation/: SKILL.md
.codex/: config.toml.example
.github/codex/prompts/: fix-issue.md
.github/workflows/: python-cd.yml  python-ci.yml
docs/: CODEX_BEST_PRACTICES_2026-02_JA.md  CODEX_GITHUB_AUTONOMOUS_DEV_GUIDE_JA.md  GITHUB_ISSUE_AUTOFIX_SETUP_JA.md  MOBILE_AUTONOMOUS_BOOTSTRAP_JA.md
scripts/: deploy.sh
template-mobile-autonomous-test/: .gitignore  AGENTS.md  README.md
template-mobile-autonomous-test/.agents/skills/issue-fix-automation/: SKILL.md
template-mobile-autonomous-test/.agents/skills/issue-fix-automation/agents/: openai.yaml
template-mobile-autonomous-test/.codex/: config.toml.example
template-mobile-autonomous-test/.github/codex/prompts/: fix-issue.md
template-mobile-autonomous-test/.github/workflows/: codex-issue-fix.yml  mobile-cd-build.yml  mobile-ci.yml
template-mobile-autonomous-test/docs/: CHECKLIST_JA.md  SETUP_JA.md
template-mobile-autonomous-test/scripts/: cd_build.sh  ci.sh  post_copy_check.sh
